refactor lots of small improvements